--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Your Name</a>
+            <a class="navbar-brand" href="#">Vaishnavi Adat</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@
 
     <section id="home" class="hero-section text-white text-center d-flex align-items-center justify-content-center">
         <div class="container">
-            <h1 class="display-2 fw-bold" id="hero-title">Hello, I'm Your Name</h1>
+            <h1 class="display-2 fw-bold" id="hero-title">Hello, I'm Vaishnavi</h1>
             <p class="lead">A Passionate Web Developer</p>
             <a href="#portfolio" class="btn btn-primary btn-lg mt-3">View My Work</a>
         </div>
@@ -42,10 +42,11 @@
                     <img src="" alt="Your Photo" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
                 </div>
                 <div class="col-lg-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.</p>
+                    <p>Hello! I'm Vaishnavi Adat, an aspiring Web Developer passionate about learning and creating. I recently completed my graduation in bachelor of computer science and have built a foundational skillset in HTML, CSS, JavaScript, and Bootstrap. This portfolio is a collection of my early projects, demonstrating my ability to build fully responsive, functional websites. I'm actively seeking opportunities to contribute and grow in a professional environment..</p>
                     <div class="row skills-list mt-4">
-                        <div class="col-md-6"><strong>Skills:</strong> HTML, CSS, JavaScript, Bootstrap</div>
-                        <div class="col-md-6"><strong>Frameworks:</strong> React, Node.js, Express (Example)</div>
+                        <div class="col-md-6"><strong>Skills:</strong>Bootstrap,C, C++, C#, JavaScript, HTML5, CSS3, Core Java</div>
+                        <div class="col-md-6"><strong>Frameworks:</strong>jQuery,ASP.NET, ADO.NET, ASP.NET MVC, Entity Framework, LINQ, REST 
+API, ASP.NET Core MVC, ReactJS </div>
                     </div>
                 </div>
             </div>
