--- a/index.html
+++ b/index.html
@@ -1,124 +1,275 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Vaishnavi Adat — Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="70" tabindex="0">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Vaishnavi Adat</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+  <!-- NAVBAR -->
+  <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Vaishnavi Adat</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HERO -->
+  <header id="home" class="hero d-flex align-items-center text-black">
+    <div class="container text-center mt-5">
+      <div class="row align-items-center">
+        <div class="col-lg-6 text-lg-start">
+          <h1 class="display-5 fw-bold">Hi, I'm <span class="accent">Vaishnavi</span></h1>
+          <p class="lead">Software developer • Frontend &amp; Full‑Stack • Passionate about clean UI &amp; accessible experiences.</p>
+          <a class="btn btn-primary btn-lg me-2" href="#contact">Hire Me</a>
+          <a class="btn btn-outline-light btn-lg" href="#projects">My Work</a>
+        </div>
+        <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
+          <div class="profile-card mx-auto mt-3">
+            <img src="images/profile.jpeg" alt="Profile" class="rounded-circle img-fluid">
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- ABOUT -->
+  <section id="about" class="py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <h2>About Me</h2>
+          <p>I build clean, responsive websites and web apps. I enjoy writing maintainable code and designing intuitive user experiences. Currently learning modern JS frameworks and cloud deployment.</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><strong>Location:</strong>Velapur</li>
+            <li class="list-inline-item"><strong>Email:</strong>vaishnaviadat@gmail.com</li>
+          </ul>
+          <a href="#projects" class="btn btn-outline-primary mt-3">See projects</a>
+        </div>
+        <div class="col-md-6 text-center">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Quick Stats</h5>
+              <p class="card-text mb-1">3+ Projects •Fresher</p>
+              <p class="card-text small text-muted">Available for fulltime and remote roles</p>
             </div>
+          </div>
         </div>
-    </nav>
+      </div>
+    </div>
+  </section>
 
-    <section id="home" class="hero-section text-white text-center d-flex align-items-center justify-content-center">
-        <div class="container">
-            <h1 class="display-2 fw-bold" id="hero-title">Hello, I'm Vaishnavi</h1>
-            <p class="lead">A Passionate Web Developer</p>
-            <a href="#portfolio" class="btn btn-primary btn-lg mt-3">View My Work</a>
-        </div>
-    </section>
+  <!-- PROJECTS -->
+  <section id="projects" class="py-5 bg-light">
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="mb-0">Selected Projects</h2>
+        <small class="text-muted">Click a card for details</small>
+      </div>
+      <div class="row g-4">
 
-    <section id="about" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">About Me</h2>
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-center">
-                    <img src="" alt="Your Photo" class="img-fluid rounded-circle mb-3" style="max-width: 200px;">
-                </div>
-                <div class="col-lg-8">
-                    <p>Hello! I'm Vaishnavi Adat, an aspiring Web Developer passionate about learning and creating. I recently completed my graduation in bachelor of computer science and have built a foundational skillset in HTML, CSS, JavaScript, and Bootstrap. This portfolio is a collection of my early projects, demonstrating my ability to build fully responsive, functional websites. I'm actively seeking opportunities to contribute and grow in a professional environment..</p>
-                    <div class="row skills-list mt-4">
-                        <div class="col-md-6"><strong>Skills:</strong>Bootstrap,C, C++, C#, JavaScript, HTML5, CSS3, Core Java</div>
-                        <div class="col-md-6"><strong>Frameworks:</strong>jQuery,ASP.NET, ADO.NET, ASP.NET MVC, Entity Framework, LINQ, REST 
-API, ASP.NET Core MVC, ReactJS </div>
-                    </div>
-                </div>
+        <!-- Project Card -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card project-card h-100" data-bs-toggle="modal" data-bs-target="#projectModal" data-title="Project One" data-desc="A responsive web app built with HTML/CSS/JS." data-img="assets/project1.png" data-link="#">
+            <img src="images/sa1.jpg" class="card-img-top" alt="project 1">
+            <div class="card-body">
+              <h5 class="card-title">Project One</h5>
+              <p class="card-text">Student Attendance System using Face Recognition.</p>
             </div>
-        </div>
-    </section>
-
-    <section id="portfolio" class="bg-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Portfolio</h2>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="" class="card-img-top" alt="Project 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Project One</h5>
-                            <p class="card-text">A brief description of your project using HTML, CSS, and JS.</p>
-                            <a href="#" class="btn btn-sm btn-outline-primary" target="_blank">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="" class="card-img-top" alt="Project 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Project Two</h5>
-                            <p class="card-text">Another project description, maybe one using Bootstrap.</p>
-                            <a href="#" class="btn btn-sm btn-outline-primary" target="_blank">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img src="" class="card-img-top" alt="Project 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Project Three</h5>
-                            <p class="card-text">A project built with React or a similar library/framework.</p>
-                            <a href="#" class="btn btn-sm btn-outline-primary" target="_blank">View Project</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="card-footer">
+              <small class="text-muted">HTML • CSS • JS •Python • SQLite • Django</small>
             </div>
+          </div>
         </div>
-    </section>
 
-    <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Get in Touch</h2>
-            <form class="row justify-content-center">
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" rows="4" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary w-100">Send Message</button>
-                </div>
-            </form>
+        <!-- Duplicate for more projects (update the data attributes) -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card project-card h-100" data-bs-toggle="modal" data-bs-target="#projectModal2" data-title="Project Two" data-desc="A small full-stack app using Node &amp; MongoDB." data-img="assets/project2.png" data-link="#">
+            <img src="images/age.jpg" class="card-img-top" alt="project 2">
+            <div class="card-body">
+              <h5 class="card-title">Project Two</h5>
+              <p class="card-text">Age Calculator System</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Python •Tkinter • DateTime Module</small>
+            </div>
+          </div>
         </div>
-    </section>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="m-0">&copy; 2025 Your Name | Built with Bootstrap</p>
-    </footer>
+        <div class="col-md-6 col-lg-4">
+          <div class="card project-card h-100" data-bs-toggle="modal" data-bs-target="#projectModal3" data-title="Project Three" data-desc="Data visualisation dashboard with charts." data-img="assets/project3.png" data-link="#">
+            <img src="images/book.jpg" class="card-img-top" alt="project 3">
+            <div class="card-body">
+              <h5 class="card-title">Project Three</h5>
+              <p class="card-text">Daily Quote Book</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">HTML •CSS</small>
+            </div>
+          </div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills" class="py-5">
+    <div class="container">
+      <h2>Skills</h2>
+      <div class="row mt-3">
+        <div class="col-sm-6 col-md-4 mb-3">
+          <h6>HTML &amp; CSS</h6>
+          <div class="progress" style="height:10px"><div class="progress-bar" role="progressbar" style="width:95%"></div></div>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-3">
+          <h6>JavaScript</h6>
+          <div class="progress" style="height:10px"><div class="progress-bar" role="progressbar" style="width:85%"></div></div>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-3">
+          <h6>React / Frameworks</h6>
+          <div class="progress" style="height:10px"><div class="progress-bar" role="progressbar" style="width:50%"></div></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="py-5 bg-dark text-light">
+    <div class="container">
+      <h2>Contact</h2>
+      <div class="row mt-3">
+        <div class="col-md-6">
+          <form id="contactForm" novalidate>
+            <div class="mb-3">
+              <label class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" required>
+              <div class="invalid-feedback">Vaishnavi Adat.</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" required>
+              <div class="invalid-feedback">vaishnaviadat@gmail.com</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Message</label>
+              <textarea class="form-control" id="message" rows="4" required></textarea>
+              <div class="invalid-feedback">Write a short message.</div>
+            </div>
+            <button class="btn btn-primary" type="submit">Send Message</button>
+          </form>
+        </div>
+        <div class="col-md-6 text-center text-md-start">
+          <h5>Get in touch</h5>
+          <p>Email: vaishnaviadat@gmail.com<br>Phone: +91 8855856871</p>
+          <p>Follow me on <a href="https://www.linkedin.com/in/vaishnavi-adat-031940343" class="link-light">LinkedIn</a> / <a href="https://github.com/vaishnaviadat" class="link-light">GitHub</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="py-3 text-center small">
+    <div class="container">© <span id="year"></span> Vaishnavi Adat • Built with ❤️</div>
+  </footer>
+
+  <!-- PROJECT MODAL -->
+  <div class="modal fade" id="projectModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="projectModalLabel">Student Attendance System using Face Recognition | Python </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <img id="projectModalImg" src="images/project1.png" alt="Student Attendance System image" class="img-fluid mb-3">
+          <p id="projectModalDesc">
+            <span>•Automated attendance using OpenCV and facial recognition </span><br>
+            <span>• Stored attendance records in a secure SQLite database. </span><br>
+            <span>• Tech Stack: Python, Django, OpenCV, NumPy, SQLite, HTML, CSS, Bootstrap, VS Code</span>
+            <h6>Project Link:</h6>
+            <a href="https://github.com/vaishnaviadat/Daily_Quote-_Book1" target="_blank">Student Attendance System using Face Recognition on GitHub</a>
+         </p>
+        </div>
+        <div class="modal-footer">
+          <a id="projectModalLink" href="#" target="_blank" class="btn btn-primary">View Project</a>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="projectModal2" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="projectModalLabel">Age Calculator System | Python </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <img id="projectModalImg" src="images/project2.jpeg" alt="Age Calculator image" class="img-fluid mb-3">
+          <p id="projectModalDesc">
+            <span>•Designed a GUI-based age calculator using Python’s Tkinter library. </span><br>
+            <span>•Tech Stack: Python, Tkinter, DateTime Module, VS Code</span><br>
+            <h6>Project Link:</h6>
+            <a href="https://github.com/vaishnaviadat/Daily_Quote-_Book1" target="_blank">Age Calculator on GitHub</a>
+         </p>
+        </div>
+        <div class="modal-footer">
+          <a id="projectModalLink" href="#" target="_blank" class="btn btn-primary">View Project</a>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="projectModal3" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="projectModalLabel">Daily Quote Book</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <img id="projectModalImg" src="images/project3.jpeg" alt="Daily Quote Book image" class="img-fluid mb-3">
+          <p id="projectModalDesc">
+            <span>•The aim of this project is to motivate users with positive thoughts and make their day better through inspiring words.</span><br>
+            <span>•Responsive design for mobile and desktop views.</span><br>
+            <span>•Attractive UI using Bootstrap and custom CSS.</span><br>
+            <span>•Tech Stack:HTML,CSS,VS Code</span><br>
+            <h6>Project Link:</h6>
+            <a href="https://github.com/vaishnaviadat/Daily_Quote-_Book1" target="_blank"> Daily Quote Book on GitHub</a>
+         </p>
+        </div>
+        <div class="modal-footer">
+          <a id="projectModalLink" href="#" target="_blank" class="btn btn-primary">View Project</a>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
+
+
+
